# pdk-cartographer

./: .contributor-check  .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  pyproject.toml
.github/workflows/: ci.yml
data/derived/m3_standard_cell_atlas/: fixture_cell_inventory.csv  fixture_library_summary.json
data/derived/m4_timing_table_explorer/: fixture_timing_summary.json  fixture_timing_tables.csv
data/fixtures/liberty/: multi_cell_combinational.lib  parser_edge_cases.lib  timing_arcs.lib  timing_table_2x2.lib  timing_table_3x3.lib  timing_table_edge_cases.lib  (+2 more)
docs/: README.md
docs/concepts/: liberty-basics.md  liberty-parser-scope.md  pdk-anatomy.md  standard-cell-atlas.md  standard-cells.md  timing-corners.md  timing-table-explorer.md
docs/logs/: 2026-04-27-m1-kickoff.md  2026-04-27-m2-liberty-parser-core.md  2026-04-27-m3-standard-cell-atlas.md  2026-05-01-m4-timing-table-explorer.md
docs/milestones/: m1-repo-foundation.md  m2-liberty-parser-core.md  m3-standard-cell-atlas.md  m4-timing-table-explorer.md
docs/reports/: m1-foundation-report.md  m2-liberty-parser-core-report.md  m3-standard-cell-atlas-report.md  m4-timing-table-explorer-report.md
scripts/: generate_fixture_atlas.py  generate_fixture_timing_report.py
src/pdk_cartographer/: __init__.py
tests/: test_atlas_classify.py  test_atlas_render.py  test_atlas_summarize.py  test_import.py  test_liberty_diagnostics.py  test_liberty_lexer.py  test_liberty_models.py  test_liberty_parser.py  test_liberty_timing_tables.py  test_timing_render.py  test_timing_summarize.py
(+15 files in other folders)
